--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <main class="cartao">
       <div class="minhas-informacoes">
-        <img class="meuperfil" src="https://avatars.githubusercontent.com/u/114202517?v=4" alt="foto de perfil" />
+        <img class="meuperfil" src="./imagens/foto-perfil-gui.jpg" alt="foto de perfil" />
         <h1 class="nome">Guilherme Reimann</h1>
         <h2 class="cargo">Futuro - Desenvolvedor Frontend</h2>
       </div>
@@ -57,19 +57,19 @@
               <!--<li> 
                     <a href="https://docs.google.com/document/d/1y29qJelptW_dI6KlpK9LLGVusSQfaGkfQ6sTuH9CJcM/edit?usp=sharing" 
                     target="_blank" class="curriculo">Currículo</a>
-                </li> -->
+                </li> 
                 <li> 
                   <a href="" target="_blank" class="curriculo">Currículo</a>
-              </li>
+              </li>-->
                  <li>
-                      <a href="#" target="_blank" class="linkedin">LinkedIn</a>
+                      <a href="https://www.linkedin.com/in/guilherme-reimann-888a34253/" target="_blank" class="linkedin">LinkedIn</a>
                 </li> 
                 <li>
                     <a href="https://github.com/GuilhermeReimann" target="_blank" class="github">GitHub</a>
                 </li>
 
                 <li>
-                  <a href="https://www.instagram.com/carlosguilherme.cg/" target="_blank" class="instagram">Instragram</a> 
+                  <a href="https://www.instagram.com/carlosguilherme.cg/" target="_blank" class="curriculo">Instragram</a> 
                </li>
             </ul>
           </div>
